fix alignment welcome.html

--- a/styles/welcome.css
+++ b/styles/welcome.css
@@ -23,40 +23,45 @@ img#wrapper{
   margin-block-end: 0;
   margin-block-start: 0;
   position: relative;
-  margin:auto;
   width: 350px;
   padding: 0px;
   text-align: center;
 }
 
-img#wrapper1{
-  position: relative;
-  margin-top: -10vh;
-  width: 100px;
-  padding: 0px;
-  text-align:center;
+#submit_button {
+    font-family: 'Neucha', cursive;
+    color: #faf2d8;
+    background-color:  #abcdcc;
+    size: 40px;
+    font-size: 30px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin-top: 20vh;
+    z-index: 1;
 }
+
+#submit_button:hover {
+  border: none;
+  background: #ff635c;
+  box-shadow: 0px 0px 1px #777;
+}
+
 
 .mytext {
   font-family: 'Neucha', cursive;
-  font-size: 50px;
-  height: 55px;
-  width: 150px;
+  font-size: 25px;
+  height: 53px;
+  width: 140px;
   background-color: #faf2d8;
   outline-color: #123e5b;
   color: #123e5b;
-}
-
-.name {
-  position: relative;
-  text-align: center;
-  color:white;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  margin-left: -5vh;
 }
 
 .centered {
   position: relative;
-  margin-top: -40vh;
+  margin-top: -33vh;
   text-align: center;
 }
